# novapay

./: .gitignore  DEPLOYMENT.md  README.md  render.yaml  test_sdk.py
backend/: .env.example  .env.production  .gitignore  API.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FONBNK_SANDBOX.md  PRODUCTION_DEPLOY.md  README.md  README_FONBNK.md  RENDER_DEPLOYMENT.md  SDK_README.md  backup.sh  build.sh  deploy.sh  deploy_contract.sh  docker-compose.prod.yml  health-check.sh  nginx.conf  production-checklist.md  render.yaml  start-production.sh  start.sh  test_api.sh  test_wallet_sdk.sh
backend/migrations/: 001_initial.sql  001_initial_postgres.sql  002_add_phone_number.sql  002_add_phone_number_postgres.sql
backend/soroban-contract/: Cargo.toml
backend/soroban-contract/src/: lib.rs
backend/src/: main.rs  wallet_sdk.rs  wallet_sdk_service.rs
backend/src/handlers/: auth.rs  fonbnk.rs  fonbnk_simple.rs  mod.rs  stellar.rs  transaction.rs  user.rs  wallet.rs  wallet_sdk.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  transaction.rs  user.rs  wallet.rs
backend/src/services/: auth.rs  fonbnk.rs  mod.rs  sms.rs  stellar.rs  stellar_sdk.rs  transaction.rs  wallet.rs
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AuthGuard.tsx  Button.tsx  Card.tsx  DashboardCard.tsx  FonbnkDeposit.tsx  Footer.tsx  FormInput.tsx  Navbar.tsx  ProfileHeader.tsx  ProfileSection.tsx  SendMoneyForm.tsx  Sidebar.tsx  ThemeToggle.tsx  TransactionList.tsx  WalletCard.tsx  WalletSDKTest.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
frontend/src/pages/: About.tsx  Contact.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Register.tsx
frontend/src/services/: api.ts  fonbnk.ts  stellarWallet.ts  walletSDK.ts
