[package]
name = "novapay-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }

# Authentication
jsonwebtoken = "9.0"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client for Stellar API
reqwest = { version = "0.11", features = ["json"] }

# Stellar SDK - using reqwest for HTTP calls to Horizon API
# stellar-sdk = "0.1"  # Not available, using HTTP client instead

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tower-test = "0.4"